--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.0.2+2
+version: 1.1.0+3
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -34,7 +34,6 @@ dependencies:
   path_provider: ^2.0.11
   youtube_explode_dart: ^1.12.0
   grouped_list: ^5.1.2
-  chewie: ^1.3.5
   visibility_detector: ^0.3.3
   lottie: ^1.4.3
   group_button: ^5.2.1
@@ -50,7 +49,12 @@ dependencies:
   animated_text_kit: ^4.2.2
   package_info_plus: ^2.0.0
   liquid_pull_to_refresh: ^3.0.1
-
+  google_nav_bar: ^5.0.6
+  salomon_bottom_bar: ^3.3.1
+  video_player: ^2.4.7
+  chewie: ^1.3.5
+  in_app_review: ^2.0.4
+  ffmpeg_kit_flutter: 5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +83,7 @@ flutter_native_splash:
 flutter:
   assets: 
     - assets/icons/
-    - assets/jsons/
+    - assets/json/
 
   uses-material-design: true
 
