--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 
-version: 1.1.0+3
+version: 1.2.0+5
 
 environment:
   sdk: '>=2.18.0 <3.0.0'
@@ -65,7 +65,7 @@ dev_dependencies:
   
   flutter_native_splash: ^2.2.9
   flutter_launcher_icons: ^0.10.0 
-  
+  change_app_package_name: ^1.1.0
 
 
 flutter_icons:
