--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   chewie: ^1.3.5
   in_app_review: ^2.0.4
   ffmpeg_kit_flutter: 5.1.0
+  firebase_auth: ^3.9.0
+  firebase_core: ^1.22.0
+  cloud_firestore: ^3.4.8
 
 dev_dependencies:
   flutter_test:
